# rfcdl

./: .editorconfig  .flake8  .gitignore  .travis.yml  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: main.yml
data/: config-example.ini
packaging/rpm/: rfcdl.spec
rfcdl/: __main__.py  arguments.py  config.py  document.py  downloader.py  exception.py  logging.py  rfcdl.py  util.py
scripts/: copr_trigger.py
tests/: test_util.py
