[tool.poetry]
name = "rfcdl"
version = "1.2.9"
description = "A tool for downloading RFCs in high-speed."
license = "MIT"
authors = ["eikendev <raphael@eiken.dev>"]
readme = "README.md"
keywords = ["rfc", "downloader", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: POSIX",
]
packages = [
    { include = "rfcdl" }
]

[tool.poetry.scripts]
rfcdl = "rfcdl.rfcdl:main"

[tool.poetry.urls]
"homepage" = "https://pypi.python.org/pypi/rfcdl"

[tool.poetry.dependencies]
aiofiles = "^0.7"
aiohttp = "^3"
python = "^3.9"
requests = "^2"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "^0.910"
types-aiofiles = "^0.1.9"
types-requests = "^2.25.6"
vulture = "^2.3"
pytest = "^6.2.5"
copr = "^1.112"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
single-quote = true
target-version = ['py39']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.pytest_cache
  | dist
  | build
  | docs
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["rfcdl", "tests", "scripts"]
skip_glob = ["docs/*"]
include_trailing_comma = true
force_grid_wrap = false
combine_as_imports = true
line_length = 120
force_sort_within_sections = true

[tool.mypy]
files = ["rfcdl", "tests", "scripts"]
allow_redefinition = true
ignore_missing_imports = true

[tool.vulture]
paths = ["rfcdl", "tests", "scripts"]
