[metadata]
name = rfcdl
author = eikendev
author_email = raphael@eiken.dev
license = MIT
keywords = rfc, downloader, cli
description = A tool for downloading RFCs in high-speed.
long_description = file: README.rst
url = https://pypi.python.org/pypi/rfcdl
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Utilities
    Environment :: Console
    Operating System :: POSIX

[options]
python_requires = >=3
install_requires =
    aiofiles; python_version >= "0.3.0"
    aiohttp; python_version >= "3.0.0"
    requests; python_version >= "2.0.0"
setup_requires =
    setuptools_scm; python_version >= "1.15.7"

[tool:pytest]
filterwarnings =
    ignore
    default:::rfcdl.*
